unpackaged/main/default/objects/Business_Development_Activity__c/Business_Development_Activity__c.object-meta.xml
<CustomObject>
    <label>Business Development Activity</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Development Activity</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>