unpackaged/main/default/objects/Business_Development_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Development Activity</relationshipLabel>
    <relationshipName>Business_Development_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>