unpackaged/main/default/objects/Business_Development_Activity__c/fields/Alchemy_Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_Training_Completed_Date__c</fullName>
    <label>Alchemy Training Completed Date</label>
    <type>Date</type>
</CustomField>