unpackaged/main/default/objects/Business_Development_Activity__c/fields/Approved_Borrowing_Base__c.field-meta.xml
<CustomField>
    <fullName>Approved_Borrowing_Base__c</fullName>
    <label>Approved Borrowing Base</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>