unpackaged/main/default/objects/Business_Development_Activity__c/fields/Biz_Dev_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Customer_Type__c</fullName>
    <label>Biz Dev Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner - Finance</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Alchemist</fullName>
            </value>
            <value>
                <fullName>Alchemist - Retention</fullName>
            </value>
            <value>
                <fullName>Enterprise - Retention</fullName>
            </value>
            <value>
                <fullName>Enterprise (Member) - Retention</fullName>
            </value>
            <value>
                <fullName>Build Only</fullName>
            </value>
            <value>
                <fullName>Partner Ramp</fullName>
            </value>
            <value>
                <fullName>Corporate Development</fullName>
            </value>
            <value>
                <fullName>Services Division</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>Strategic Partnership</fullName>
            </value>
            <value>
                <fullName>Seed Funding</fullName>
            </value>
            <value>
                <fullName>Partner - Top Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>