unpackaged/main/default/objects/Business_Development_Activity__c/fields/Build_Cost__c.field-meta.xml
<CustomField>
    <fullName>Build_Cost__c</fullName>
    <inlineHelpText>Cost/Watt</inlineHelpText>
    <label>Build Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>