unpackaged/main/default/objects/Business_Development_Activity__c/fields/Business_Introduction_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Business_Introduction_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Introduction Agreement</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Development</relationshipLabel>
    <relationshipName>Business_Introduction_Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>