unpackaged/main/default/objects/Business_Development_Activity__c/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <label>Channel Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alaina Pianetti</fullName>
            </value>
            <value>
                <fullName>Alyssa Haley</fullName>
            </value>
            <value>
                <fullName>Andrew Catapano</fullName>
            </value>
            <value>
                <fullName>Anthony Silvestri</fullName>
            </value>
            <value>
                <fullName>Dan Devito</fullName>
            </value>
            <value>
                <fullName>James Carter</fullName>
            </value>
            <value>
                <fullName>Jonathan Van Putten</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Ron Cates</fullName>
            </value>
            <value>
                <fullName>Sean Fahey</fullName>
            </value>
            <value>
                <fullName>Taylor Coppin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>