unpackaged/main/default/objects/Business_Development_Activity__c/fields/Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date__c</fullName>
    <label>Closed Lost Date</label>
    <type>Date</type>
</CustomField>