unpackaged/main/default/objects/Business_Development_Activity__c/fields/Company_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner_Name__c</fullName>
    <label>Company Owner Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>