unpackaged/main/default/objects/Business_Development_Activity__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <label>Company Website</label>
    <length>60</length>
    <type>Text</type>
</CustomField>