unpackaged/main/default/objects/Business_Development_Activity__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Build Partner</fullName>
            </value>
            <value>
                <fullName>Enterprise Account</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>