unpackaged/main/default/objects/Business_Development_Activity__c/fields/Date_Signed_Up__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_Up__c</fullName>
    <label>Sign Up Date</label>
    <type>Date</type>
</CustomField>