unpackaged/main/default/objects/Business_Development_Activity__c/fields/Day_Count__c.field-meta.xml
<CustomField>
    <fullName>Day_Count__c</fullName>
    <formula>TODAY()  -  Date_Signed_Up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>