unpackaged/main/default/objects/Business_Development_Activity__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation SLA</fullName>
            </value>
            <value>
                <fullName>PTO SLA</fullName>
            </value>
            <value>
                <fullName>Poor Communication</fullName>
            </value>
            <value>
                <fullName>Low Commission</fullName>
            </value>
            <value>
                <fullName>Understanding Commission</fullName>
            </value>
            <value>
                <fullName>Design Quality</fullName>
            </value>
            <value>
                <fullName>Design SLA</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Poor Training</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>New Job Opportunity</fullName>
            </value>
            <value>
                <fullName>Wants full time position</fullName>
            </value>
            <value>
                <fullName>Unresponsive Member</fullName>
            </value>
            <value>
                <fullName>Moving to Enterprise</fullName>
            </value>
            <value>
                <fullName>Appointment Issues</fullName>
            </value>
            <value>
                <fullName>Tech Issues</fullName>
            </value>
            <value>
                <fullName>Login Issues</fullName>
            </value>
            <value>
                <fullName>Unresponsive Coach</fullName>
            </value>
            <value>
                <fullName>Unsure of Next Steps</fullName>
            </value>
            <value>
                <fullName>Failed Test</fullName>
            </value>
            <value>
                <fullName>Confused After Orientation</fullName>
            </value>
            <value>
                <fullName>Logistics Issues</fullName>
            </value>
            <value>
                <fullName>Poor Customer Experience</fullName>
            </value>
            <value>
                <fullName>Market Not Serviced</fullName>
            </value>
            <value>
                <fullName>Unable to Sell</fullName>
            </value>
            <value>
                <fullName>Unsure Who to Contact</fullName>
            </value>
            <value>
                <fullName>Expectations Not Met</fullName>
            </value>
            <value>
                <fullName>Unsure How to Access Orientation</fullName>
            </value>
            <value>
                <fullName>No Closing Call Providing Next Steps</fullName>
            </value>
            <value>
                <fullName>Health Reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>