unpackaged/main/default/objects/Business_Development_Activity__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gmail</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>iCloud</fullName>
            </value>
            <value>
                <fullName>Ymail</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
            <value>
                <fullName>Mail.com</fullName>
            </value>
            <value>
                <fullName>Aol</fullName>
            </value>
            <value>
                <fullName>Hotmail</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Bellsouth</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>