unpackaged/main/default/objects/Business_Development_Activity__c/fields/First_Appointment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment_Completed_Date__c</fullName>
    <label>First Appointment Completed Date</label>
    <type>Date</type>
</CustomField>