unpackaged/main/default/objects/Business_Development_Activity__c/fields/First_Sale__c.field-meta.xml
<CustomField>
    <fullName>First_Sale__c</fullName>
    <label>First Sale</label>
    <type>Date</type>
</CustomField>