unpackaged/main/default/objects/Business_Development_Activity__c/fields/Hand_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Hand_off_Date__c</fullName>
    <label>Hand-off Date</label>
    <type>Date</type>
</CustomField>