unpackaged/main/default/objects/Business_Development_Activity__c/fields/How_did_you_hear_about_us_Other__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us_Other__c</fullName>
    <label>How did you hear about us? (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>