unpackaged/main/default/objects/Business_Development_Activity__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bandwidth</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Corporate Partnerships | Partner-Sourced</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Market Manager</fullName>
            </value>
            <value>
                <fullName>Member Page</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Policy/Licensing</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Referral | Affiliate Partner</fullName>
            </value>
            <value>
                <fullName>Referral | Employee</fullName>
            </value>
            <value>
                <fullName>Self Generated Lead</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Glassdoor</fullName>
            </value>
            <value>
                <fullName>Zip Recruiter</fullName>
            </value>
            <value>
                <fullName>Retention Team</fullName>
            </value>
            <value>
                <fullName>Verse.io</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>