unpackaged/main/default/objects/Business_Development_Activity__c/fields/Lead_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Type__c</fullName>
    <label>Lead Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Self-Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>