unpackaged/main/default/objects/Business_Development_Activity__c/fields/Membership_Count__c.field-meta.xml
<CustomField>
    <fullName>Membership_Count__c</fullName>
    <label>Membership Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>