unpackaged/main/default/objects/Business_Development_Activity__c/fields/Milestones_SLAs__c.field-meta.xml
<CustomField>
    <fullName>Milestones_SLAs__c</fullName>
    <label>Milestones &amp; SLAs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Alchemy Training</fullName>
            </value>
            <value>
                <fullName>Sales Training</fullName>
            </value>
            <value>
                <fullName>1x1</fullName>
            </value>
            <value>
                <fullName>First Appointment</fullName>
            </value>
            <value>
                <fullName>First Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>