unpackaged/main/default/objects/Business_Development_Activity__c/fields/Monthly_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Interest_Rate__c</fullName>
    <label>Monthly Interest Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>