unpackaged/main/default/objects/Business_Development_Activity__c/fields/MSA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Received_Date__c</fullName>
    <label>MSA Received Date</label>
    <type>Date</type>
</CustomField>