unpackaged/main/default/objects/Business_Development_Activity__c/fields/Number_of_Funded_Projects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Funded_Projects__c</fullName>
    <label>Number of Funded Projects</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>