unpackaged/main/default/objects/Business_Development_Activity__c/fields/Orientation_Date__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Date__c</fullName>
    <label>Orientation Date</label>
    <type>Date</type>
</CustomField>