unpackaged/main/default/objects/Business_Development_Activity__c/fields/Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee__c</fullName>
    <label>Origination Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>