unpackaged/main/default/objects/Business_Development_Activity__c/fields/Project_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Project_Service_Fee__c</fullName>
    <label>Project Service Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>