unpackaged/main/default/objects/Business_Development_Activity__c/fields/Reason_for_Loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Loss__c</fullName>
    <label>Reason for Loss</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desires Lead Gen Service</fullName>
            </value>
            <value>
                <fullName>Dislike Comp Structure</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>No Solar Experience</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SLA Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>