unpackaged/main/default/objects/Business_Development_Activity__c/fields/Retention_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Retention_Rebate__c</fullName>
    <label>Retention Rebate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Month</fullName>
            </value>
            <value>
                <fullName>Free 2 Months</fullName>
            </value>
            <value>
                <fullName>$100 Appointment Credit</fullName>
            </value>
            <value>
                <fullName>$200 Appointment Credit</fullName>
            </value>
            <value>
                <fullName>$300 Appointment Credit</fullName>
            </value>
            <value>
                <fullName>$500 Appointment Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>