unpackaged/main/default/objects/Business_Development_Activity__c/fields/Sales_Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Enterprise_Account__c</fullName>
    <label>Sales Enterprise Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>