unpackaged/main/default/objects/Business_Development_Activity__c/fields/Sales_Experience__c.field-meta.xml
<CustomField>
    <fullName>Sales_Experience__c</fullName>
    <label>Sales Experience?</label>
    <length>60</length>
    <type>Text</type>
</CustomField>