unpackaged/main/default/objects/Business_Development_Activity__c/fields/Sales_Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Training_Completed_Date__c</fullName>
    <label>Sales Training Completed Date</label>
    <type>Date</type>
</CustomField>