unpackaged/main/default/objects/Business_Development_Activity__c/fields/SDR_Sales__c.field-meta.xml
<CustomField>
    <fullName>SDR_Sales__c</fullName>
    <label>SDR Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>