unpackaged/main/default/objects/Business_Development_Activity__c/fields/Second_Sale__c.field-meta.xml
<CustomField>
    <fullName>Second_Sale__c</fullName>
    <label>Second Sale</label>
    <type>Date</type>
</CustomField>