unpackaged/main/default/objects/Business_Development_Activity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Early Discussion</fullName>
            </value>
            <value>
                <fullName>Advanced Discussion</fullName>
            </value>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Proposal Created</fullName>
            </value>
            <value>
                <fullName>Partner Documentation Collection</fullName>
            </value>
            <value>
                <fullName>Partner Documents Review</fullName>
            </value>
            <value>
                <fullName>Partner Documents Confirm</fullName>
            </value>
            <value>
                <fullName>Term Sheet Executed</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>First Sale</fullName>
            </value>
            <value>
                <fullName>Second Sale</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Deal Funded</fullName>
            </value>
            <value>
                <fullName>Cancellation Requested</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>