unpackaged/main/default/objects/Business_Development_Activity__c/fields/Sub_market__c.field-meta.xml
<CustomField>
    <fullName>Sub_market__c</fullName>
    <label>Sub-Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ann Arbor</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Boston Metro</fullName>
            </value>
            <value>
                <fullName>Bronx</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Cape</fullName>
            </value>
            <value>
                <fullName>Charleston</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Detroit</fullName>
            </value>
            <value>
                <fullName>Greenville</fullName>
            </value>
            <value>
                <fullName>Hilton Head</fullName>
            </value>
            <value>
                <fullName>Jacksonville</fullName>
            </value>
            <value>
                <fullName>Knoxville</fullName>
            </value>
            <value>
                <fullName>Long Island</fullName>
            </value>
            <value>
                <fullName>MA - Metrowest</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>MA - North Shore</fullName>
            </value>
            <value>
                <fullName>MA - South Shore</fullName>
            </value>
            <value>
                <fullName>MA - Western</fullName>
            </value>
            <value>
                <fullName>Memphis</fullName>
            </value>
            <value>
                <fullName>Miami</fullName>
            </value>
            <value>
                <fullName>Myrtle Beach</fullName>
            </value>
            <value>
                <fullName>Nashville</fullName>
            </value>
            <value>
                <fullName>New Orleans</fullName>
            </value>
            <value>
                <fullName>NJ - Central</fullName>
            </value>
            <value>
                <fullName>NJ - North</fullName>
            </value>
            <value>
                <fullName>NJ - South</fullName>
            </value>
            <value>
                <fullName>North Augusta</fullName>
            </value>
            <value>
                <fullName>Orlando</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>